// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SteamWidget renders AI summary if present 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    [{"label":"Games Played","value":5}]
  </div>
  <div
    className="css-uovtx3"
  >
    <div
      className="css-uzg792"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-robot css-18ctdm5"
        data-icon="robot"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M320 0c17.7 0 32 14.3 32 32l0 64 120 0c39.8 0 72 32.2 72 72l0 272c0 39.8-32.2 72-72 72l-304 0c-39.8 0-72-32.2-72-72l0-272c0-39.8 32.2-72 72-72l120 0 0-64c0-17.7 14.3-32 32-32zM208 384c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zM264 256a40 40 0 1 0 -80 0 40 40 0 1 0 80 0zm152 40a40 40 0 1 0 0-80 40 40 0 1 0 0 80zM48 224l16 0 0 192-16 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zm544 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-16 0 0-192 16 0z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      <h3
        className="css-1oe0291"
      >
        AI Summary
      </h3>
    </div>
    <div
      className="css-1ngsodd"
    />
    <p
      className="css-1pqlddt"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-robot css-io06p5"
        data-icon="robot"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M320 0c17.7 0 32 14.3 32 32l0 64 120 0c39.8 0 72 32.2 72 72l0 272c0 39.8-32.2 72-72 72l-304 0c-39.8 0-72-32.2-72-72l0-272c0-39.8 32.2-72 72-72l120 0 0-64c0-17.7 14.3-32 32-32zM208 384c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zM264 256a40 40 0 1 0 -80 0 40 40 0 1 0 80 0zm152 40a40 40 0 1 0 0-80 40 40 0 1 0 0 80zM48 224l16 0 0 192-16 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zm544 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-16 0 0-192 16 0z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      Generated by Gemini (AI)
    </p>
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-o8fdm3"
  />
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    className="css-16ilj6a"
  >
    <div
      className="css-ichx2m"
    >
      <p
        className="css-ozcv56"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</div>
`;

exports[`SteamWidget renders correctly with sample data 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    [{"label":"Games Played","value":5}]
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-o8fdm3"
  >
    <div
      data-testid="PostCard"
    >
      Half-Life
    </div>
    <div
      data-testid="PostCard"
    >
      Portal
    </div>
  </div>
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    className="css-16ilj6a"
  >
    <div
      className="css-13cuy4j"
    >
      <div
        className="css-tb97q7"
      >
        <div
          className="css-1gsn9vf"
        />
        <div>
          <h3
            className="css-1d4p7yv"
          >
            Gaming Library
          </h3>
          <p
            className="css-b3lywm"
          >
            Top 
            2
             Most Played Games
          </p>
          <div
            className="css-1qn1d2e"
          >
            <div
              className="css-1b6rjoo"
            >
              <div
                className="css-hgov20"
              />
              <span>
                1st
              </span>
            </div>
            <div
              className="css-1b6rjoo"
            >
              <div
                className="css-1gpukds"
              />
              <span>
                2nd
              </span>
            </div>
            <div
              className="css-1b6rjoo"
            >
              <div
                className="css-1lobtgo"
              />
              <span>
                3rd
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-4nao5k"
      >
        <div
          className="css-zlegha"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-if3n60"
          >
            <div
              className="css-5ekpf7"
            >
              1
            </div>
            <div
              className="css-1xzv6nx"
            >
              <img
                alt="Cities: Skylines header"
                className="css-1hlyxwi"
                src="https://example.com/cities-icon.jpg"
              />
            </div>
            <div
              className="css-44so8i"
            >
              Cities: Skylines
            </div>
          </div>
          <div
            className="css-187niig"
          >
            <div
              className="css-1ssi4vd"
            >
              Cities: Skylines
            </div>
            <div
              className="css-ps3dpt"
            >
              <div
                className="css-46lypi"
              >
                <span>
                  757.35
                  h total
                </span>
                <span
                  className="css-xj83bz"
                >
                  #
                  1
                   most played
                </span>
              </div>
              <div
                className="css-rs46q8"
              >
                <div
                  className="css-k8ewr8"
                />
              </div>
              <div
                className="css-1hofln5"
              >
                757.35
                h
              </div>
            </div>
            <div
              className="css-34ftfj"
            >
              757 hours, 21 minutes
              <span
                className="css-41bbhk"
              >
                • 
                2 hours
                 recently
              </span>
            </div>
          </div>
        </div>
        <div
          className="css-mpmlf3"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-if3n60"
          >
            <div
              className="css-9pdcsm"
            >
              2
            </div>
            <div
              className="css-1xzv6nx"
            >
              <img
                alt="ARK: Survival Evolved header"
                className="css-1hlyxwi"
                src="https://example.com/ark-icon.jpg"
              />
            </div>
            <div
              className="css-44so8i"
            >
              ARK: Survival Evolved
            </div>
          </div>
          <div
            className="css-187niig"
          >
            <div
              className="css-1ssi4vd"
            >
              ARK: Survival Evolved
            </div>
            <div
              className="css-ps3dpt"
            >
              <div
                className="css-46lypi"
              >
                <span>
                  277.83
                  h total
                </span>
                <span
                  className="css-xj83bz"
                >
                  #
                  2
                   most played
                </span>
              </div>
              <div
                className="css-rs46q8"
              >
                <div
                  className="css-wo5j6q"
                />
              </div>
              <div
                className="css-1hofln5"
              >
                277.83
                h
              </div>
            </div>
            <div
              className="css-34ftfj"
            >
              277 hours, 50 minutes
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-yoczvr"
      >
        <div
          className="css-aq86v7"
        >
          Total Hours:
           
          <span
            className="css-rba8ex"
          >
            1035.2
            h
          </span>
        </div>
        <div
          className="css-aq86v7"
        >
          Average:
           
          <span
            className="css-rba8ex"
          >
            517.6
            h per game
          </span>
        </div>
      </div>
      <div
        className="css-the6ff"
      >
        <a
          className="css-drd097"
          href="https://steamcommunity.com/id/chrisvogt/games/?tab=all"
          rel="noopener noreferrer"
          target="_blank"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-up-right-from-square fa-xs "
              data-icon="up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={{}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6l0-128c0-17.7-14.3-32-32-32L352 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
                fill="currentColor"
                style={{}}
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`SteamWidget renders error state (hasFatalError) 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    [{"label":"Games Played","value":5}]
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-o8fdm3"
  />
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    className="css-16ilj6a"
  >
    <div
      className="css-ichx2m"
    >
      <p
        className="css-ozcv56"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</div>
`;

exports[`SteamWidget renders loading state 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    []
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-o8fdm3"
  />
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    className="css-16ilj6a"
  >
    <div
      className="css-1tv6dui"
    >
      <div
        className="css-e2czm4"
      >
        <div
          className="css-1omu3y4"
        />
        <p
          className="css-1snu6r4"
        >
          Loading Gaming Library...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SteamWidget renders with empty metrics 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    []
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-o8fdm3"
  />
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    className="css-16ilj6a"
  >
    <div
      className="css-ichx2m"
    >
      <p
        className="css-ozcv56"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</div>
`;

exports[`SteamWidget renders with empty recentlyPlayedGames and ownedGames 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    [{"label":"Games Played","value":5}]
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-o8fdm3"
  />
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    className="css-16ilj6a"
  >
    <div
      className="css-ichx2m"
    >
      <p
        className="css-ozcv56"
      >
        No gaming data available for library.
      </p>
    </div>
  </div>
</div>
`;
